# WireguardVPN

./: README.md
Automatic/: Cargo.toml  README.md
Automatic/src/: main.rs
Manual/: README.md
Manual/Client/: start.sh  wg_0.conf
Manual/Server/: setup.sh  stop.sh  wg_0.conf
